--- a/templates/info.html
+++ b/templates/info.html
@@ -13,7 +13,7 @@
                     Firefox, and Edge browsers to different degrees, but support for credential
                     creation and assertion using a U2F Token, like those provided by Yubico and
                     Feitian, is supported by all of them. The code for this demo can be found
-                    <a href="https://github.com/duo-labs/webauthn.io">here on GitHub</a>. To read more about WebAuthn
+                    <a href="https://github.com/lkalneus/webauthn.io">here on GitHub</a>. To read more about WebAuthn
                     and what is does, check out
                     <a href="https://webauthn.guide">webauthn.guide</a> for an introduction.</p>
                 <div class="row">
@@ -36,7 +36,7 @@
         </div>
         <div class="row">
             <div class="mt-3 col-sm-12 col-md-6 col-lg-4 d-flex flex-column">
-                <a class="library" href="https://github.com/duo-labs/webauthn">
+                <a class="library" href="https://github.com/lkalneus/webauthn">
                     <h5>Go</h5>
                     <p class="mb-1"><img class="icon" src="/dist/images/github.svg" /> <span class="ml-2">duo-labs/webauthn</span></p>
                     <p class="mb-1"><img class="icon" src="/dist/images/author.svg" /> <span class="ml-2">Duo Labs</span></p>
@@ -44,7 +44,7 @@
                 </a>
             </div>
             <div class="mt-3 col-sm-12 col-md-6 col-lg-4 d-flex flex-column">
-                <a class="library" href="https://github.com/duo-labs/webauthn.io">
+                <a class="library" href="https://github.com/lkalneus/webauthn.io">
                     <h5>Go</h5>
                     <p class="mb-1"><img class="icon" src="/dist/images/github.svg" /> <span class="ml-2">duo-labs/webauthn.io</span></p>
                     <p class="mb-1"><img class="icon" src="/dist/images/author.svg" /> <span class="ml-2">Duo Labs</span></p>
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class="mt-3 col-sm-12 col-md-6 col-lg-4 d-flex flex-column">
-                <a class="library" href="https://github.com/duo-labs/android-webauthn-authenticator">
+                <a class="library" href="https://github.com/lkalneus/android-webauthn-authenticator">
                     <h5>Java</h5>
                     <p class="mb-1"><img class="icon" src="/dist/images/github.svg" /> <span class="ml-2">duo-labs/android-webauthn-authenticator</span></p>
                     <p class="mb-1"><img class="icon" src="/dist/images/author.svg" /> <span class="ml-2">Duo Labs</span></p>
@@ -110,7 +110,7 @@
                 </a>
             </div>
             <div class="mt-3 col-sm-12 col-md-6 col-lg-4 d-flex flex-column">
-                <a class="library" href="https://github.com/duo-labs/py_webauthn">
+                <a class="library" href="https://github.com/lkalneus/py_webauthn">
                     <h5>Python</h5>
                     <p class="mb-1"><img class="icon" src="/dist/images/github.svg" /> <span class="ml-2">duo-labs/py_webauthn</span></p>
                     <p class="mb-1"><img class="icon" src="/dist/images/author.svg" /> <span class="ml-2">Duo Labs</span></p>
